fixed scaling on mobile

--- a/githubsearch/style.css
+++ b/githubsearch/style.css
@@ -2,7 +2,7 @@
 	text-align: center;
 }
 .avatar{
-	width: 16%;
+	width: 24%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
